--- a/css/style.scss
+++ b/css/style.scss
@@ -12,8 +12,140 @@
 .center{
 	text-align: center;
 }
+h2{
+	color: #383838;
+	font-size: 25px;
+	font-family: "lato-heavy";
+	text-align: center;
+	text-transform: uppercase;
+	font-weight: bold;
+}
+.testimonials{
+	.owl-controls{
+		display: block;
+		width: 250px;
+		margin: 0 auto;
+		outline: 1px solid blue;
+		position: relative;
+	}
+	.owl-dots{
+		display: block;
+		margin: 0 auto;
+		outline: 1px solid red;
+
+		//width: 80%;
+		//margin: 0 auto;
+
+		.owl-dot{
+			display: inline-block;
+			margin-right: 15px;
+			position: relative;
+			text-align: center;
+			span{
+				font-family: "lato-heavy";
+				
+				span{
+					display: inline-block;
+					color: #fff;
+					font-size: 25px;
+					margin-top: 4px;
+				}
+			}
+			
+
+		}
+		.owl-dot > span{
+			display: inline-block;
+			display: block;
+			width: 35px;
+			height: 35px;
+			border-radius: 10em;
+			background: #5faeda;
+		}
+		.owl-dot:after{
+
+		}
+		.active > span{
+			display: inline-block;
+			display: block;
+			width: 35px;
+			height: 35px;
+			border-radius: 10em;
+			background: #1b8bcb;
+		}
+	}
+	.item{
+		
 
 
+		
+		img{
+			display: inline-block;
+			width: unset;
+			height: unset;
+		}
+	}
+}
+.testimonials__img-box{
+	width: 100%;
+	text-align: center;
+}
+.testimonials__left{
+	text-align: center;
+	width: 100%;
+}
+.testimonials__left-title{
+	display: block;
+	color: #383838;
+	font-family: "MuseoSansCyrl500";
+	font-size: 20px;
+	font-weight: bold;
+	margin-bottom: 25px;
+}
+.soc-link{
+	color: #1b8bcb;
+	text-transform: none;
+	font-family: "MuseoSansCyrl500";
+}
+.testimonials__right{
+	background: #fdfdfd;
+	padding: 30px;
+	box-sizing: border-box;	
+}
+.testimonials__right-title{
+	display: block;
+	color: #000;
+	font-size: 24px;
+	font-family: "lato-heavy";
+	text-align: center;
+	margin-bottom: 25px;
+}
+.testimonials__right-text{
+	font-family: "MuseoSansCyrl500";
+	color: #383838;
+	font-size: 16px;
+	line-height: 26px;
+}
+.testimonials-arr{
+	display: block;
+	font-family: "lato-medium";
+	font-size: 34px;
+	color: #000;
+	position: absolute;
+	width: 25px;
+	height: 25px;
+	
+	margin-top: 5px;
+
+}
+.testimonials-left{
+	left: 0px;
+	margin-right: 35px;
+}
+
+.testimonials-right{
+	right: 0px;
+}
 
 @media only screen and (min-width : 320px) {
 }
@@ -25,6 +157,18 @@
 }
 
 @media only screen and (min-width : 992px) {
+	h2{
+		font-size: 34px !important;
+	}
+	.testimonials__left{
+		float: left;
+		width: 20%;
+
+	}
+	.testimonials__right{
+		float: right;
+		width: 75%;
+	}
 }
 
 @media only screen and (min-width : 1248px) {
